	* sysdeps/unix/sysv/linux/riscv/bits/timesize.h: Likewise.
	* sysdeps/unix/sysv/linux/riscv/bits/typesizes.h: Likewise.

2018-06-20  Zong Li  <zong@andestech.com>

	* sysdeps/unix/sysv/linux/riscv/ldconfig.h (LD_SO_ABI): Support rv32.
	* sysdeps/unix/sysv/linux/riscv/ldconfig.h (LD_SO_ABI): Support rv32.
	* sysdeps/unix/sysv/linux/riscv/dl-cache.h (add_system_dir): Add
	libraries path for rv32.

2019-06-20  Dmitry V. Levin  <ldv@altlinux.org>
	    Florian Weimer  <fweimer@redhat.com>

	[BZ #24228]
	* libio/genops.c (_IO_unbuffer_all)
	[SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_1)]: Do not attempt to free wide
	buffers and access _IO_FILE_complete members of legacy libio streams.
	* libio/tst-bz24228.c: New file.
	* libio/tst-bz24228.map: Likewise.
	* libio/Makefile [build-shared] (tests): Add tst-bz24228.
	[build-shared] (generated): Add tst-bz24228.mtrace and
	tst-bz24228.check.
	[run-built-tests && build-shared] (tests-special): Add
	$(objpfx)tst-bz24228-mem.out.
	(LDFLAGS-tst-bz24228, tst-bz24228-ENV): New variables.
	($(objpfx)tst-bz24228-mem.out): New rule.

2019-06-19  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/fenv_libc.h (relax_fenv_state): Add 'volatile'.
	* sysdeps/powerpc/fpu/fpu_control.h (__FPU_MFFS): Likewise.
	(__FPU_MFFSL): Likewise.
	(_FPU_SETCW): Likewise.

2019-06-19  Stan Shebs  <stanshebs@google.com>
	    Raoni Fassina Firmino  <raoni@linux.ibm.com>

	[BZ #24640]
	* sysdeps/unix/sysv/linux/powerpc/get_timebase_freq.c
	[!SHARED] (__get_timebase_freq): Fix sense of a test in the
	static-linking version.
	* sysdeps/unix/sysv/linux/powerpc/Makefile
	(tests-static): Add test-gettimebasefreq-static.
	(tests): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/test-gettimebasefreq-static.c:
	New file.

2019-06-19  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #24614]
	* localedata/locales/nl_AW (n_sep_by_space): Set to 2 (a space
	between the currency symbol and the minus sign).